--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,10 @@
     "description": "Content management for website/blog functionality.",
     "type": "library",
     "require": {
-        "nestboxphp/nestbox": "^0.0.1"
+        "nestboxphp/nestbox": ">=0.0.1"
     },
     "require-dev": {
-        "nestboxphp/nestbox": "^0.0.1"
+        "nestboxphp/nestbox": ">=0.0.1"
     },
     "license": "AGPL-3.0",
     "autoload": {
