--- a/composer.json
+++ b/composer.json
@@ -3,16 +3,15 @@
     "description": "Content management for website/blog functionality.",
     "type": "library",
     "require": {
-        "nestboxphp/nestbox": ">=0.0.1"
+        "nestboxphp/nestbox": ">=v0.0.1"
     },
     "require-dev": {
-        "nestboxphp/nestbox": ">=0.0.1"
+        "nestboxphp/nestbox": ">=v0.0.1"
     },
     "license": "AGPL-3.0",
     "autoload": {
         "psr-4": {
             "NestboxPHP\\Babbler\\": "src/"
         }
-    },
-    "minimum-stability": "beta"
+    }
 }
